@@ -26,13 +26,15 @@ Description: GNU C Library: Shared libraries [i686 optimized]
  the system. This package includes shared versions of the standard C
  library and the standard math library, as well as many others.
  .
- This set of libraries is optimized for i686 machines. Only install this
- if you have a i686 class CPU (check the output of `uname -m'). This
- usually includes Pentium Pro, Pentium II/III, Celeron CPU's and similar
- class CPU's (including clones such as AMD). For standard Pentium class
- machines, check the libc6-i586 package.
+ This set of libraries is optimized for i686 machines, and will only be
+ used if you have an i686 class CPU (check the output of `uname -m').  This
+ includes Pentium Pro, Pentium II/III, Celeron CPU's and similar class
+ CPU's (including clones such as AMD, but not the Via C3).
  .
- WARNING: Some commercial programs do not work well with these libraries.
+ This package includes support for NPTL.  The optimized libraries will not
+ be used unless you are using a 2.6 kernel.
+ .
+ WARNING: Some commercial programs may not work well with these libraries.
  Most notably, IBM's JDK. If you experience problems with such
  applications, you will need to remove this package.
 
